# pytorch-ie

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-dev-tools.sh
.github/workflows/: constraints.txt
examples/train/: span_classification.py
src/pytorch_ie/: document.py
src/pytorch_ie/core/: model.py  taskmodule.py
src/pytorch_ie/data/: builder.py
src/pytorch_ie/models/: transformer_span_classification.py  transformer_text_classification.py  transformer_token_classification.py
tests/: test_annotations.py
tests/data/: dataset_tester.py
tests/train/: test_training.py
