[build-system]
# requires = ["poetry-core>=1.1.0"]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytorch-ie"
version = "0.14.0"
description = "State-of-the-art Information Extraction in PyTorch"
readme = "README.md"
authors = ["Christoph Alt <christoph.alt@posteo.de>"]
license = "MIT"
homepage = "https://github.com/christophalt/pytorch-ie"
repository = "https://github.com/christophalt/pytorch-ie"
documentation = "https://pytorch-ie.readthedocs.io"
packages = [
    { include = "pytorch_ie", from = "src" },
]
classifiers = [
    "Framework :: Pytest",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/christophalt/pytorch-ie/issues"
"Changelog" = "https://github.com/christophalt/pytorch-ie/releases"

[tool.poetry.dependencies]
python = "^3.9"
urllib3="1.26.16"
lightning = "^2.0.2"
datasets = "~2.12.0"
transformers = "^4.29.2"
huggingface-hub = "^0.15.1"
torchmetrics = "^0.11.4"
absl-py = "^1.4.0"

[tool.poetry.dev-dependencies]
Pygments = "^2.15.1"
black = "^23.3.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.5.9"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
furo = "^2023.5.20"
isort = "^5.12.0"
mypy = "^1.3.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.2"
pre-commit-hooks = "^4.4.0"
pytest = "^7.3.1"
pyupgrade = "^3.4.0"
safety = "^2.3.5"
sphinx = "^7.0.1"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^4.4.0"
typeguard = "^4.0.0"
xdoctest = {extras = ["colors"], version = "^1.1.1"}
sh = "^2.0.4"
types-requests = "^2.31.0.1"
nox = "^2023.4.22"
nox-poetry = "^1.0.2"
python-dotenv = "^1.0.0"
pytest-xdist = "^3.3.1"

[tool.black]
line-length = 99
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["pytorch_ie"]

[tool.mypy]
files = [
    "pytorch_ie",
    "examples",
    "tests",
    "datasets"
]
warn_unreachable = false
# warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pytorch_ie"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.pytest.ini_options]
testpaths = "tests/"
log_cli = true
markers = [
    "slow"
]
addopts = [
    "--durations=0",
    "--strict-markers",
    "--doctest-modules"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
